# Industrial-planning-

./: README.md
plansys_ws/: all.groups  variables.groups
plansys_ws/install/: local_setup.sh  setup.sh
plansys_ws/install/plansys2_bringup/lib/plansys2_bringup/: plansys2_node
plansys_ws/install/plansys2_bringup/share/plansys2_bringup/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
plansys_ws/install/plansys2_bt_actions/lib/plansys2_bt_actions/: bt_action_node
plansys_ws/install/plansys2_bt_actions/share/plansys2_bt_actions/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
plansys_ws/install/plansys2_bt_example/lib/plansys2_bt_example/: assemble_action_node  assemble_controller_node  nav2_sim_node
plansys_ws/install/plansys2_bt_example/share/plansys2_bt_example/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+1 more)
plansys_ws/src/ros2_planning_system_examples/plansys2_simple_example/: CMakeLists.txt
plansys_ws/src/ros2_planning_system_examples/plansys2_simple_example/launch/: plansys2_simple_example_launch.py
plansys_ws/src/ros2_planning_system_examples/plansys2_simple_example/pddl/: simple_example.pddl
plansys_ws/src/ros2_planning_system_examples/plansys2_simple_example/src/: bolt_acquired_action_node.cpp  deliver_box_action_node.cpp  empty_box_action_node.cpp  fill_box_action_node.cpp  move_box_robot_action_node.cpp  move_robot_action_node.cpp  pick_up_box_action_node.cpp  tool_acquired_action_node.cpp  valve_acquired_action_node.cpp
plansys_ws/src/tmp/: domain.pddl  problem_4_1.pddl  problem_4_2.pddl  problem_4_extreme.pddl  sas_plan.txt
problem_1/: domain.pddl  domani.pddl  output.sas  problem_1_1.pddl  problem_1_1.pddl.plan  problem_1_2.pddl  problem_1_2.pddl.plan  problem_1_extreme.pddl  sas_plan  sas_plan.1
problem_1/result_extreme/: downward.txt  lama.txt  symk.txt
problem_1/results_1/: downward.txt  ff.txt  laam.txt  lpg-td.txt  symk.txt
problem_1/results_2/: downward.txt  ff.txt  lama.txt  lpg-td.txt  symk.txt
problem_2/: domain.pddl  problem_2_1.pddl  problem_2_1.pddl.plan  problem_2_2.pddl  problem_2_2.pddl.plan  problem_2_extreme.pddl  problem_2_extreme_map.drawio  sas_plan
problem_2/result_1/: downward.txt  ff.txt  lama.txt  lpg-td.txt  symk.txt
problem_2/result_2/: downward.txt  ff.txt  lama.txt  lpg-td.txt  symk.txt
problem_2/result_extreme/: downward.txt  lama.txt  symk.txt
problem_3/: domain.hddl  problem_3_1.hddl  problem_3_2.hddl
problem_3/results/: Panda_solution_1.txt  Panda_solution_2.txt
problem_4/: domain.pddl  domain_no_neg.pddl  extreme_plan.txt  problem_4_1.pddl  problem_4_1_no_neg.pddl  problem_4_2.pddl  problem_4_2_no_neg.pddl
problem_4/results/: optic.txt  tfd.txt
problem_4/results_2/: optic.txt  tfd.txt
result_problem_5/: plan.txt
(+547 files in other folders)
